Sat Apr 11 10:59:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (append_cppflags, append_cflags, append_ldflags):
	  utility methods to append compiler options.

Sat Apr 11 08:22:24 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rdoc/text.rb: removed duplicated code.

Sat Apr 11 04:46:42 2015  Eric Wong  <e@80x24.org>

	* lib/net/protocol.rb (rbuf_fill): avoid exception with read_nonblock
	  [ruby-core:68787] [Feature #11044]

Fri Apr 10 23:57:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (need_normalization): use getattrlist() if fgetattrlist()
	  is unavailable, on OSX 10.5.  [ruby-core:68829] [Bug #11054]

Fri Apr 10 22:29:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (try_compile): pass the given werror flag to try_do
	  to check if stderr is empty.

	* lib/mkmf.rb (try_cflags, try_ldflags): default werror to true.

	* win32/Makefile.sub (WERRORFLAG): remove useless option.  VC does
	  not make warnings of unknown command option an error.

Fri Apr 10 19:34:24 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test socket.

Fri Apr 10 19:38:46 2015  Koichi Sasada  <ko1@atdot.net>

	* test/objspace/test_objspace.rb: remove debug prints.

Fri Apr 10 19:35:51 2015  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c: add ObjectSpace.count_imemo_objects method
	  to count imemo objects for each type.

	* test/objspace/test_objspace.rb: add a test.

	* NEWS: describe about this addition.

Fri Apr 10 19:34:24 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test anonymous pipe.

Fri Apr 10 19:31:56 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test named pipe.

Fri Apr 10 19:10:34 2015  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (setup_hash): unify common routine.

Fri Apr 10 18:29:49 2015  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_execarg_parent_start1): Handle EINTR.
